[gd_scene load_steps=18 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://bg.png" type="Texture" id=2]
[ext_resource path="res://stamp.tscn" type="PackedScene" id=3]
[ext_resource path="res://check.png" type="Texture" id=4]
[ext_resource path="res://cross.png" type="Texture" id=5]
[ext_resource path="res://cursor.png" type="Texture" id=6]
[ext_resource path="res://label_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://267930__anagar__clapping.wav" type="AudioStream" id=8]
[ext_resource path="res://353925__dr-skitz__boo.wav" type="AudioStream" id=9]
[ext_resource path="res://263133__pan14__tone-beep.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 512, 50 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 512, 50 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 50, 300 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 50, 300 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 512, 300 )

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 5.0

[node name="main" type="Node2D"]

script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="borders_group" type="Node" parent="."]

editor/display_folded = true

[node name="borders" type="StaticBody2D" parent="borders_group"]

editor/display_folded = true
input_pickable = false
collision_layer = 31
collision_mask = 31
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.1
bounce = 1.0
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="top" type="CollisionShape2D" parent="borders_group/borders"]

position = Vector2( 512, -50 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="top_left" type="CollisionShape2D" parent="borders_group/borders"]

position = Vector2( -50, -50 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="top_right" type="CollisionShape2D" parent="borders_group/borders"]

position = Vector2( 1074, -50 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="bottom_left" type="CollisionShape2D" parent="borders_group/borders"]

position = Vector2( -50, 650 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="bottom_right" type="CollisionShape2D" parent="borders_group/borders"]

position = Vector2( 1074, 650 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="bottom" type="CollisionShape2D" parent="borders_group/borders"]

position = Vector2( 512, 650 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="accepted_exit_border" type="StaticBody2D" parent="borders_group"]

editor/display_folded = true
input_pickable = false
collision_layer = 23
collision_mask = 23
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="right" type="CollisionShape2D" parent="borders_group/accepted_exit_border"]

position = Vector2( 1074, 300 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="denied_exit_border" type="StaticBody2D" parent="borders_group"]

editor/display_folded = true
input_pickable = false
collision_layer = 15
collision_mask = 15
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="left" type="CollisionShape2D" parent="borders_group/denied_exit_border"]

position = Vector2( -50, 300 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="area" type="Area2D" parent="."]

editor/display_folded = true
visible = false
position = Vector2( 512, 300 )
input_pickable = true
space_override = 3
gravity_vec = Vector2( 0, 0 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 31775
collision_mask = 31775
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="area" type="CollisionShape2D" parent="area"]

shape = SubResource( 6 )

[node name="pickables" type="Node" parent="."]

[node name="stamp_check" parent="pickables" groups=[
"accept",
] instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 238.618, 185.361 )
z_as_relative = false
collision_mask = 0
_sections_unfolded = [ "Collision", "Pickable", "Z" ]
icon_texture = ExtResource( 4 )

[node name="stamp_cross" parent="pickables" groups=[
"deny",
] instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 358.651, 151.066 )
z_as_relative = false
collision_mask = 0
_sections_unfolded = [ "Collision", "Pickable", "Visibility", "Z" ]
icon_texture = ExtResource( 5 )

[node name="gravity_timer" type="Timer" parent="."]

process_mode = 0
wait_time = 1.0
one_shot = false
autostart = false

[node name="mouse" type="KinematicBody2D" parent="."]

position = Vector2( 495.915, 155.256 )
input_pickable = false
collision_layer = 0
collision_mask = 32
collision/safe_margin = 0.08
_sections_unfolded = [ "Collision" ]

[node name="collision" type="CollisionShape2D" parent="mouse"]

shape = SubResource( 7 )

[node name="pin" type="PinJoint2D" parent="mouse"]

node_a = NodePath("")
node_b = NodePath("")
bias = 0.0
disable_collision = true
softness = 5.0

[node name="sprite" type="Sprite" parent="mouse"]

visible = false
z = 4096
z_as_relative = false
texture = ExtResource( 6 )
_sections_unfolded = [ "Z" ]

[node name="paper_timer" type="Timer" parent="."]

process_mode = 0
wait_time = 1.0
one_shot = true
autostart = false

[node name="game_timer" type="Timer" parent="."]

process_mode = 0
wait_time = 300.0
one_shot = true
autostart = false

[node name="UI" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="closed_prs" type="Label" parent="UI"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 40.0
margin_right = 226.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "Closed PR: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="open_prs" type="Label" parent="UI"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 5.0
margin_right = 307.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "Open PR: 0"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="score" type="Label" parent="UI"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 0
text = "Score: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="timer_label" type="Label" parent="UI"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "TIME: 0:00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="claps" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="boo" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="new_message" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 10 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="stamped" from="pickables/stamp_check" to="." method="_on_stamp_stamped"]

[connection signal="stamped" from="pickables/stamp_cross" to="." method="_on_stamp_stamped"]

[connection signal="timeout" from="gravity_timer" to="." method="_on_gravity_timer_timeout"]

[connection signal="timeout" from="paper_timer" to="." method="_on_paper_timer_timeout"]

[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]


